--- a/Landing_page/src/assets/Components/Home/VideoHero.css
+++ b/Landing_page/src/assets/Components/Home/VideoHero.css
@@ -12,15 +12,20 @@ video {
 
 .content {
     position: absolute;
-    width: 100%;
-    height: 100%;
     top: 50%;
     left: 10%;
     display: flex;
+    flex-direction: column;
 }
 
 .content h1 {
     color: white;
     font-size: 70px;
 
+}
+
+.content p {
+    color: white;
+    font-size: 25px;
+    margin-top: 20px;
 }
