--- a/Landing_page/src/assets/Components/Drivers/Drivers.css
+++ b/Landing_page/src/assets/Components/Drivers/Drivers.css
@@ -3,4 +3,7 @@
     grid-template-columns: 1fr 1fr ;
     place-items: center;
     row-gap: 100px;
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 150px
 }
