--- a/Landing_page/src/assets/Components/Home/VideoHero.css
+++ b/Landing_page/src/assets/Components/Home/VideoHero.css
@@ -7,12 +7,12 @@ video {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    filter: brightness(40%)
+    filter: brightness(35%)
 }
 
 .content {
     position: absolute;
-    top: 50%;
+    top: 30%;
     left: 10%;
     display: flex;
     flex-direction: column;
@@ -21,11 +21,21 @@ video {
 .content h1 {
     color: white;
     font-size: 70px;
-
 }
 
 .content p {
     color: white;
     font-size: 25px;
     margin-top: 20px;
+}
+
+.content button {
+    padding: 15px 15px;
+    width: 200px;
+    margin-top: 30px;
+    background-color: var(--main-color-red);
+    border: none;
+    border-radius: .3rem;
+    cursor: pointer;
+    color: white;
 }
