--- a/Landing_page/src/assets/Components/Navigation/Navigation.css
+++ b/Landing_page/src/assets/Components/Navigation/Navigation.css
@@ -4,7 +4,7 @@
 }
 
 .nav-bar {
-    height: 70px;
+    height: 60px;
     display: flex;
     align-items: center;
     width: 100%;
@@ -18,6 +18,7 @@
     position: relative;
     color: #0087ca;
     font-weight:  600;
+    font-size: 14px;
 }
 
 
