--- a/Landing_page/src/assets/Components/UI/Cards/ImageCard.css
+++ b/Landing_page/src/assets/Components/UI/Cards/ImageCard.css
@@ -3,6 +3,8 @@
     width: 100%;
     height: 100%;
     color: white;
+    top: 0;
+    left: 0
 }
 
 
@@ -10,4 +12,8 @@
     max-width: 400px;
     max-height: 800px;
     border-radius: 1.5em;
+}
+
+.image-card-container {
+    position: relative;
 }
