--- a/Landing_page/src/Components/UI/Loading/LoadingPage.css
+++ b/Landing_page/src/Components/UI/Loading/LoadingPage.css
@@ -5,6 +5,6 @@
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.4);
     backdrop-filter: blur(15px);
-    position: absolute;
+    position: fixed;
     z-index: 1040;
 }
