--- a/Landing_page/src/Components/Navigation/Navigation.css
+++ b/Landing_page/src/Components/Navigation/Navigation.css
@@ -9,7 +9,7 @@
     align-items: center;
     width: 100%;
     justify-content: space-around;
-    
+    background-color: rgb(30, 30, 30);
 }
 
 .nav-bar li  {
