--- a/Landing_page/src/Components/History/YearSection.css
+++ b/Landing_page/src/Components/History/YearSection.css
@@ -2,13 +2,23 @@
     display: flex;
     flex-direction: column;
     align-items: start;
+    width: 95%;
+    margin: 0 auto;
+    margin-top: 5rem;
 }
 
 
 .year-section-header {
-    width: 80%;
+    width: 75%;
     margin: 0 auto;
     font-size: 30px;
+    margin-bottom: 3rem;
 }
 
 
+.year-section-info-cards {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    
+}
